--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,12 +115,30 @@ select = [
 ignore = [
   # Allow non-abstract empty methods in abstract base classes
   "B027",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
   # Ignore checks for possible passwords
-  "S105", "S106", "S107",
+  "S105",
+  "S106",
+  "S107",
   # Ignore complexity
-  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+  "C901",
+  "PLR0911",
+  "PLR0912",
+  "PLR0913",
+  "PLR0915",
+  # Ignore line length, let black, docformatter handle it
+  "E501",
+  # Ignore cache usage
+  "B019",
+  # Ignore None and Boolen comparisons from sqlalchemy and pandas
+  "E711",
+  "E712",
+  # Ignore other
+  "E741",
+  "N802",
+  "S311",
+  "S104",
+  "B008",
+  "S101",
 ]
 unfixable = [
   # Don't touch unused imports
