updated: permission header

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
 # finnize
 FINNIZE_API_KEY = 'abc'
 FINNIZE_API_SECRET = 'abc'
+
+# DEVLOPMENT SETUP set it as `True`
+# For guru set it as `False`
+FINNIZE_ENVIRONMENT = False
+
+ROLE_ID = 2
+NAME = "guru"
+CAN_LOGIN_ADMIN_SITE = False
+CAN_CREATE_STRATEGY = True
+USER_ID = 1234
+BROKER_ID = 025
